--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Nuwan",
-            "email": "nuwa@layoutindex.com"
-        },
-        {
-            "name": "Dewbud",
-            "email": "jalfonso1134@gmail.com"
+            "name": "Nuwan Wijethilaka",
+            "email": "nuwan.prime@gmail.com"
         }
     ],
     "scripts": {
